feat: Added encryption and decrtyption in psp.